// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic enum 1`] = `
Array [
  Object {
    "code": "import { IUser } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

export type UserTypeRoot = \\"ADMIN\\" | \\"EDITOR\\" | \\"COLLABORATOR\\";

export interface UserRoot {
  id: string;
  name: string;
  type: UserTypeRoot;
}

export const User: IUser.Resolver<Types> = {
  id: root => root.id,
  name: root => root.name,
  type: root => root.type
};
",
    "path": "User.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "path": "Context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"[TEMPLATE-INTERFACES-PATH]\\";

import { UserRoot } from \\"./User\\";

export { Context } from \\"./Context\\";

export interface Types extends ITypes {
  Context: Context;

  UserRoot: UserRoot;
}
",
    "path": "types.ts",
  },
]
`;

exports[`basic schema 1`] = `
Array [
  Object {
    "code": "import { IQuery } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

import { NumberRoot } from \\"./Number\\";

export interface QueryRoot {
  id: string;
  custom_required: NumberRoot;
  custom_nullable: NumberRoot | null;
  custom_array_nullable: NumberRoot[] | null;
  custom_array_required: NumberRoot[];
  custom_with_arg: NumberRoot;
  custom_with_custom_arg: NumberRoot;
  scalar_required: boolean;
  scalar_nullable: boolean | null;
  scalar_array_nullable: boolean[] | null;
  scalar_array_required: boolean[];
  scalar_with_arg: boolean;
  scalar_with_custom_arg: boolean;
}

export const Query: IQuery.Resolver<Types> = {
  id: root => root.id,
  custom_required: root => root.custom_required,
  custom_nullable: root => root.custom_nullable,
  custom_array_nullable: root => root.custom_array_nullable,
  custom_array_required: root => root.custom_array_required,
  custom_with_arg: (root, args) => root.custom_with_arg,
  custom_with_custom_arg: (root, args) => root.custom_with_custom_arg,
  scalar_required: root => root.scalar_required,
  scalar_nullable: root => root.scalar_nullable,
  scalar_array_nullable: root => root.scalar_array_nullable,
  scalar_array_required: root => root.scalar_array_required,
  scalar_with_arg: (root, args) => root.scalar_with_arg,
  scalar_with_custom_arg: (root, args) => root.scalar_with_custom_arg
};
",
    "path": "Query.ts",
  },
  Object {
    "code": "import { INumber } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

export interface NumberRoot {
  id: string | null;
  value: number | null;
}

export const Number: INumber.Resolver<Types> = {
  id: root => root.id,
  value: root => root.value
};
",
    "path": "Number.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "path": "Context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"[TEMPLATE-INTERFACES-PATH]\\";

import { QueryRoot } from \\"./Query\\";

import { NumberRoot } from \\"./Number\\";

export { Context } from \\"./Context\\";

export interface Types extends ITypes {
  Context: Context;

  QueryRoot: QueryRoot;
  NumberRoot: NumberRoot;
}
",
    "path": "types.ts",
  },
]
`;

exports[`basic union 1`] = `
Array [
  Object {
    "code": "import { IUser } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

import { StudentRoot } from \\"./Student\\";
import { ProfessorRoot } from \\"./Professor\\";

export type UserTypeRoot = StudentRoot | ProfessorRoot;

export interface UserRoot {
  id: string;
  name: string;
  type: UserTypeRoot;
}

export const User: IUser.Resolver<Types> = {
  id: root => root.id,
  name: root => root.name,
  type: root => root.type
};
",
    "path": "User.ts",
  },
  Object {
    "code": "import { IStudent } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

export interface StudentRoot {
  age: number;
}

export const Student: IStudent.Resolver<Types> = {
  age: root => root.age
};
",
    "path": "Student.ts",
  },
  Object {
    "code": "import { IProfessor } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types\\";

export interface ProfessorRoot {
  degree: string | null;
}

export const Professor: IProfessor.Resolver<Types> = {
  degree: root => root.degree
};
",
    "path": "Professor.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "path": "Context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"[TEMPLATE-INTERFACES-PATH]\\";

import { UserRoot } from \\"./User\\";

import { StudentRoot } from \\"./Student\\";

import { ProfessorRoot } from \\"./Professor\\";

export { Context } from \\"./Context\\";

export interface Types extends ITypes {
  Context: Context;

  UserRoot: UserRoot;
  StudentRoot: StudentRoot;
  ProfessorRoot: ProfessorRoot;
}
",
    "path": "types.ts",
  },
]
`;
